--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <div class="container">
         <div class="sandzz">
-            <p>i need to know the changes</p>
+            <p>i need to know the changes
+                <div class="staging">
+                    <p>try kar</p>
+                </div>
+            </p>
         </div>
     </div>
     
